package com.fzizzi.crawler.engine

import java.security.MessageDigest
import java.util.SortedMap
import java.util.TreeMap

class ConsistentHashRouter<T>() {
    // TODO: implement or include into the crawler's design
}
