package com.fzizzi.crawler.model

data class HTMLContent(
    val url: String,
    val content: String,
    val hash: String
)
